--- a/style.css
+++ b/style.css
@@ -1,7 +1,16 @@
 body {
-  font-family: sans-serif;
+  font-family: Arial, sans-serif;
   text-align: center;
   background-color: #f0f0f0;
+}
+
+h1 {
+  margin-top: 20px;
+}
+
+#turn {
+  margin-bottom: 10px;
+  font-weight: bold;
 }
 
 #board {
@@ -9,27 +18,34 @@ body {
   grid-template-columns: repeat(8, 60px);
   grid-template-rows: repeat(8, 60px);
   margin: 20px auto;
+  width: 480px;
+  height: 480px;
   border: 2px solid #333;
 }
 
 .square {
   width: 60px;
   height: 60px;
-}
-
-.dark {
-  background-color: #444;
+  position: relative;
 }
 
 .light {
   background-color: #eee;
 }
 
+.dark {
+  background-color: #444;
+}
+
 .piece {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  margin: 10px auto;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  cursor: pointer;
+  transition: transform 0.2s ease;
 }
 
 .red {
@@ -38,4 +54,13 @@ body {
 
 .black {
   background-color: black;
+}
+
+.selected {
+  outline: 3px solid yellow;
+  transform: scale(1.1);
+}
+
+.highlight {
+  outline: 3px solid yellow;
 }
